# monkey

./: CMakeLists.txt
mk_bin/: CMakeLists.txt  mk_signals.c
mk_core/: mk_event_rtems.c  mk_iov.c  mk_utils.c
mk_server/: mk_scheduler.c  mk_user.c
plugins/liana/: liana.c
